[package]
name = "dev-tiktokenizer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }
tower = { version = "0.4", features = ["util"] }
thiserror = "1.0"
once_cell = "1.19"
tiktoken-rs = "0.5"

[[bin]]
name = "dev-tiktokenizer"
path = "src/main.rs"
